# practicum-cpp

bookypedia/: README.md
game_server/solution/: CMakeLists.txt  Dockerfile  README.md
game_server/solution/src/: boost_json.cpp  main.cpp  sdk.h
game_server/solution/src/application/: application.cpp  application.h  game_session_manager.h  player.h  player_manager.h  player_tokens.h  state_manager.h
game_server/solution/src/constants/: config.h
game_server/solution/src/database/app/: unit_of_work.h  use_cases.h  use_cases_impl.h
game_server/solution/src/database/domain/: player_record.h
game_server/solution/src/database/postgres/: connection_pool.h  postgres.cpp  postgres.h
game_server/solution/src/http_server/: http_server.h  listener.h  session.cpp  session.h  ticker.h
game_server/solution/src/json_loader/: json_loader.cpp  json_loader.h
game_server/solution/src/logger/: logger.cpp  logger.h
game_server/solution/src/model/: bag.h  building.h  data_model.h  dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  item_dog_provider.h  lost_object.h  map.cpp  map.h  office.h  road.h  road_movement.cpp  road_movement.h
game_server/solution/src/model/collision_detector/: collision_detector.cpp  collision_detector.h
game_server/solution/src/parse_command_line/: parse_command_line.h
game_server/solution/src/request/: api_request_handler.cpp  api_request_handler.h  request_handler.h  static_file_request_handler.cpp  static_file_request_handler.h  utils.h
game_server/solution/src/utils/: random_generator.h  tagged.h  tagged_uuid.cpp  tagged_uuid.h
(+62 files in other folders)
